--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "flask-dev": " pip install -r requirements.txt && python -m flask --app api/index run -p 8000 --reload",
+    "flask-dev": " pip install -r requirements.txt && python -m flask --app api.index run -p 8000 --reload --debug",
     "next-dev": "next dev",
     "dev": "concurrently \"pnpm run next-dev\" \"pnpm run flask-dev\"",
     "build": "next build",
